--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ env:
 - OS=ubuntu_xenial
 - OS=ubuntu_bionic
 language: python
-python: 0.0.17
+python: '3.7'
 script:
 - dcb --upstreamgroup andrewrothstein --upstreamapp docker-ansible-role --pull ${OS}
   --write ${OS} --build ${OS} --push ${OS}
